# global_costmap_erase

./: README.md  frames.gv
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/costmap_erase_plugin/: .catkin  .rosinstall
devel/.private/turtlebot3_fake/: .catkin  .rosinstall  setup.sh
devel/.private/turtlebot3_gazebo/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/turtlebot3_simulations/: .catkin  .rosinstall
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  costmap_erase_plugin.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/costmap_erase_plugin/cmake/: costmap_erase_pluginConfig-version.cmake  costmap_erase_pluginConfig.cmake
logs/costmap_erase_plugin/: build.make.003.log.stderr
src/costmap_erase_plugin/: CMakeLists.txt
src/costmap_erase_plugin/cfg/: costmap_erase_plugin_config.cfg
src/costmap_erase_plugin/include/costmap_erase_plugin/: costmap_erase_plugin.h  quadtree.h
src/costmap_erase_plugin/plugins/: erase_layer.xml
src/costmap_erase_plugin/scripts/: clear_costmap_trigger_node.py
src/costmap_erase_plugin/src/: costmap_erase_plugin.cpp
(+14 files in other folders)
